# awn-mate-applets

./: AUTHORS  Makefile.am  Makefile.common  README.md  configure.ac
applets/: Makefile.am
applets/mate-cairo-menu/: Makefile.am  backend-mate.c  backend-mate.h  cairo-aux-icon.c  cairo-main-icon.c  cairo-menu-applet.c  cairo-menu-applet.h  config_entries.c  config_entries.h  mate-cairo-menu.desktop.in.in  mate-menu-builder.c  mate-menu-builder.h  menu.c
applets/mate-mainmenu/: Makefile.am  applet.c  mate-mainmenu.desktop.in.in
applets/mate-quit/: Makefile.am  awn-applet-mate-quit.schema-ini.in  mate-quit-lock-screen.desktop.in  mate-quit-log-out.desktop.in  mate-quit-shut-down.desktop.in  mate-quit.desktop.in  mate-quit.py
applets/mate-yama/: Makefile.am  mate-yama.desktop.in  mate-yama.py
applets/mintmenu/: Makefile.am  mintMenuAwn.py  mintmenu.desktop.in
po/: POTFILES.in  POTFILES.skip  af.po  ar.po  ast.po  awn-mate-applets.pot  bg.po  ca.po  cs.po  csb.po  da.po  de.po  en_CA.po  en_GB.po  en_US@piglatin.po  es.po  et.po  eu.po  fi.po  fr.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  ms.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  sv_SE.po  th.po  (+5 more)
